# minibash

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  a  a.c  compose.yml  debuggin.c  main.c  t
.github/workflows/: c-cpp.yml
builtin/: Makefile
builtins/: cd.c  echo.c  env.c  export.c  helpers.c  pwd.c  shell_exit.c  unset.c  utils.c
execution/: Makefile  cd.c  environment.c  execute.c  heredoc.c  misc.c  paths.c  shell.c  signals.c
helpers/: ft_close.c  ft_dups.c  ft_execve.c  ft_fork.c  ft_open.c  ft_pipe.c  ft_waits.c
includes/: builtin.h  execution.h  helpers.h  minibash.h  minishell.h  parsing.h  srcs.h  utils.h
parsing/: Makefile  commads_list.c  commands.c  commands_list.c  env.c  expand.c  expand_env.c  free.c  heredoc.c  heredoc_expansion.c  lexer.c  operator.c  parse.c  parser.c  parsing_utils.c  token_list.c  tokens.c  word_spliting.c
srcs/: Makefile  environment.c  ft_close.c  ft_dups.c  ft_execve.c  ft_fork.c  ft_open.c  ft_pipe.c  ft_waits.c
utils/: Makefile  alpha.c  contains.c  fatal.c  ft_atoi.c  ft_calloc.c  ft_exit.c  ft_fprintf.c  ft_free.c  ft_itoa.c  ft_memcpy.c  ft_putstr_fd.c  ft_split.c  ft_strcmp.c  ft_strdup.c  ft_strjoins.c  ft_strlen.c  ft_substr.c  prints.c  prints_utils.c
